--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^1.1.4
+  date_field: ^3.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
