--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,29 +15,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        flutter-version: '1.0' # Mettez à jour avec la version Flutter souhaitée
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 16
 
-    - name: Install dependencies
-      run: flutter pub get
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '2.x' # Mettez à jour avec la version Flutter souhaitée
 
-    - name: Run tests
-      run: flutter test
+      - name: Install dependencies
+        run: flutter pub get
 
-    - name: Build APK
-      run: flutter build apk
+      - name: Run tests
+        run: flutter test
+
+      - name: Build APK
+        run: flutter build apk
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Upload APK
-      uses: actions/upload-artifact@v2
-      with:
-        name: app-release
-        path: build/app/outputs/flutter-apk/app-release.apk
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-release
+          path: build/app/outputs/flutter-apk/app-release.apk
